syntax = "proto3";
package model;

// cmd 1
message PerformanceMonitor {
    message Memory {
        uint64 total_mem = 1;
        uint64 used_mem = 2;
        uint64 free_mem = 3;
        uint64 actual_used = 4;
        uint64 actual_free = 5;
        uint64 used_swap = 6;
        uint64 free_swap = 7;
        uint64 total_swap = 8;
    }

    message Cpu {
        uint64 user = 1;
        uint64 nice = 2;
        uint64 sys = 3;
        uint64 idle = 4;
        uint64 wait = 5;
        uint64 irq = 6;
        uint64 soft_irq = 7;
        uint64 stolen = 8;
    }

    message Load {
        double one = 1;
        double five = 2;
        double fifteen = 3;
    }

    message FileSystem {
        string dir_name = 1;
        string dev_name = 2;
        string type_name = 3;
        string sys_type_name = 4;
        string options = 5;
        uint32 flags = 6;

        uint64 total = 7;
        uint64 used = 8;
        uint64 free = 9;
        uint64 avail = 10;
        uint64 files = 11;
        uint64 free_files = 12;
    }

    message ProcTime {
        uint64 start_time = 1;
        uint64 user = 2;
        uint64 sys = 3;
        uint64 total = 4;
    }

    message Process {
        int32 pid = 1;
        repeated string args = 2;
        string exe_name = 3;
        string exe_cwd = 4;
        string exe_root = 5;

        ProcTime cpu_proc_time = 6;
        uint64 cpu_last_time = 7;
        double cpu_percent = 8;

        uint64 mem_size = 9;
        uint64 mem_resident = 10;
        uint64 mem_share = 11;
        uint64 mem_minor_faults = 12;
        uint64 mem_major_faults = 13;
        uint64 mem_page_faults = 14;

        string stat_name = 15;
        int32 stat_state = 16;
        int32 stat_ppid = 17;
        int32 stat_tty = 18;
        int32 stat_priority = 19;
        int32 stat_nice = 20;
        int32 stat_processor = 21;
    }

    message NetWork {
        string name = 1;
        string ip = 2;
        double speed = 3;
        double out_recv_pkg_err_rate = 4; //外网收包错误率
        double out_send_pkg_err_rate = 5; //外网发包错误率
        uint64 recv_byte = 6;          //接收的字节数
        uint64 recv_pkg = 7;           //接收正确的包数
        uint64 recv_err = 8;           //接收错误的包数
        uint64 send_byte = 9;          //发送的字节数
        uint64 send_pkg = 10;          //发送正确的包数
        uint64 send_err = 11;          //发送错误的包数

        double recv_byte_avg = 12; //一个周期平均每秒接收字节数
        double send_byte_avg = 13; //一个周期平均每秒发送字节数
        double recv_err_rate = 14; //一个周期收包错误率
        double send_err_rate = 15; //一个周期发包错误率
        double recv_pkg_avg = 16;  //一个周期平均每秒收包数
        double send_pkg_avg = 17;  //一个周期平均每秒发包数
    }

    uint64 timestamp = 3;
    Memory mem = 1;
    Cpu cpu = 2;
    Load load = 4;
    double uptime = 5;
    repeated Cpu cpulist = 6;
    repeated FileSystem file_system_list = 7;
    repeated Process process_list = 8;
    repeated NetWork nets = 9;
    string os = 10;       // 系统名称
    string hostname = 11; // 主机名称
    string arch = 12;     // 架构
}